--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
   :root{--bg:#0e1116;--panel:#151a23;--line:#242b38;--text:#e9edf3;--muted:#a9b3c3;--good:#25c28a;--warn:#ffc24d;--bad:#ff4d4f;--accent:#46a3ff;}
   *{box-sizing:border-box} html{scroll-behavior:smooth}
   body{margin:0;background:var(--bg);color:var(--text);font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+
   header{padding:16px 18px;border-bottom:1px solid var(--line)}
   h1{margin:0 0 6px 0;font-size:20px}
   .sub{color:var(--muted);font-size:13px}
+
   .grid{display:grid;gap:20px;padding:16px;grid-template-columns:repeat(2,minmax(420px,1fr));justify-content:center;align-items:start;max-width:1400px;margin:0 auto;}
   @media (max-width:980px){.grid{grid-template-columns:1fr}}
+
   .card{background:var(--panel);border:1px solid var(--line);border-radius:14px;padding:14px;box-shadow:0 1px 0 #0b0f16;display:flex;flex-direction:column;position:relative}
   .row{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px}
   .name{font-weight:700}
   .del{border:none;background:#0000;color:#9aa3b5;cursor:pointer;font-size:16px;padding:2px 6px;border-radius:6px}
   .del:hover{background:#202938;color:#ffd4d4}
+
   .kpis{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:10px;margin:10px 0 12px}
   .k{border:1px solid var(--line);border-radius:10px;padding:8px 10px}
   .k b{display:block;font-size:16px}
+
   .days{margin-top:auto;display:grid;gap:8px;grid-template-columns:repeat(6,1fr)}
   .d{position:relative;background:#0c1016;border:1px solid var(--line);border-radius:10px;padding:10px;display:flex;flex-direction:column;justify-content:space-between;min-height:120px}
   .dt{font-size:12px;color:var(--muted)}
@@ -29,14 +34,20 @@
   .ico svg{fill:currentColor;stroke:currentColor}
   .t{font-weight:600}
   .tiny{font-size:12px;color:var(--muted)}
+
   .score{position:absolute;top:8px;right:8px;width:28px;height:28px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-weight:800;font-size:12px;color:#0b1a14;border:2px solid #00000040;box-shadow:0 1px 0 #0009,inset 0 -3px 8px #0003;background:var(--good)}
   .score.warn{background:var(--warn);color:#111}
   .score.bad{background:var(--bad);color:#fff}
+
   footer{padding:14px 16px;color:var(--muted);font-size:12px}
   .src a{color:var(--accent);text-decoration:none}
+
+  /* Floating controls (bottom-right) */
   .fab{position:fixed;right:16px;bottom:16px;display:flex;flex-direction:column;gap:10px;z-index:9999}
   .btn{padding:9px 12px;border-radius:10px;border:1px solid #215a9e;background:linear-gradient(180deg,#4aa5ff,#2e7fd6);color:#fff;font-weight:800;text-decoration:none;box-shadow:0 2px 10px #0006}
   .top{padding:10px 12px;border-radius:999px;border:1px solid #2a6c62;background:linear-gradient(180deg,#26c29d,#129d7d);color:#062d24;font-weight:800;text-decoration:none;box-shadow:0 2px 10px #0006}
+
+  /* Add panel */
   .panel{position:fixed;right:16px;bottom:120px;background:var(--panel);border:1px solid var(--line);border-radius:12px;padding:10px;box-shadow:0 3px 18px #0009;min-width:260px;display:none;z-index:9999}
   .panel h3{margin:0 0 8px 0;font-size:14px}
   .rowi{display:flex;gap:6px;margin-bottom:6px}
@@ -50,28 +61,33 @@
 <body>
 <header>
   <h1>UK Trekking – Daily HikeScores</h1>
-  <div class="sub">Each tile shows its own HikeScore · Data: <a href="https://open-meteo.com/" target="_blank">Open-Meteo</a></div>
+  <div class="sub">Each tile shows its own HikeScore · Data: <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a></div>
 </header>
+
 <section class="grid" id="cards"></section>
+
 <footer><span class="src">Adjust weights in <code>scoreSuitability()</code>. Scores floor at &lt;10.</span></footer>
 
+<!-- Floating controls -->
 <div class="fab">
   <a class="btn" href="regions_map.html">Regions Map</a>
   <a class="btn" href="#" id="addBtn">＋ Add location</a>
   <a class="top" href="#top" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑ Top</a>
 </div>
 
+<!-- Add location -->
 <div class="panel" id="addPanel">
   <h3>Add location</h3>
-  <div class="rowi"><input id="nm" placeholder="Name" /></div>
-  <div class="rowi"><input id="lt" placeholder="Latitude" /><input id="ln" placeholder="Longitude" /></div>
+  <div class="rowi"><input id="nm" placeholder="Name e.g. Upper Basildon" /></div>
+  <div class="rowi"><input id="lt" placeholder="Latitude e.g. 51.488" /><input id="ln" placeholder="Longitude e.g. -1.123" /></div>
   <div class="actions">
-    <button class="reset" id="resetBtn">Reset</button>
+    <button class="reset" id="resetBtn" title="Restore defaults">Reset</button>
     <button id="saveBtn">Add</button>
   </div>
 </div>
 
 <script>
+/* ---------- Defaults (Upper Basildon first) ---------- */
 const defaultRegions = [
   { name:"Upper Basildon", lat:51.488, lon:-1.123 },
   { name:"South Downs & Chilterns", lat:51.000, lon:-0.900 },
@@ -83,24 +99,147 @@ const defaultRegions = [
   { name:"Brecon Beacons (Storey Arms)", lat:51.885, lon:-3.471 },
   { name:"North York Moors (Helmsley)", lat:54.245, lon:-1.056 },
   { name:"Dartmoor (Princetown)", lat:50.546, lon:-3.990 },
-  { name:"Exmoor (Simonsbath)", lat:51.120, lon:-3.690 },
+  { name:"Exmoor (Simonsbath)",  lat:51.120, lon:-3.690 },
   { name:"Norfolk Broads (Wroxham)", lat:52.710, lon:1.410 },
   { name:"Gwydyr Forest (Betws-y-Coed)", lat:53.102, lon:-3.806 }
 ];
-const STORAGE_KEY="trek_regions";
-function loadRegions(){try{const raw=localStorage.getItem(STORAGE_KEY);if(!raw)return[...defaultRegions];const arr=JSON.parse(raw);return Array.isArray(arr)&&arr.length?arr:[...defaultRegions];}catch{return[...defaultRegions];}}
-function saveRegions(l){localStorage.setItem(STORAGE_KEY,JSON.stringify(l));}
-const I={sun:'<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></svg>',cloud:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 1 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4s-1.8 4.5-4 4.5z"/></svg>',rain:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4s-1.8 4.5-4 4.5z"/><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></svg>'};
-function iconKey(c){if([0].includes(c))return"sun";if([1,2,3,45,48].includes(c))return"cloud";if([61,63,65,80,81,82].includes(c))return"rain";return"cloud";}
-function scoreSuitability({wind,precip,tmax,tmin,cloud}){let s=100;if(wind>35)s-=(wind-35)*.8;if(precip>0)s-=Math.min(precip,10)*1;if(tmax<2||tmin<-2)s-=10;if(tmax>24)s-=(tmax-24);if(cloud>90)s-=3; s=Math.round(Math.max(5,Math.min(100,s)));const show=s<=10?"<10":s;const cls=s>=55?"good":s>=40?"warn":"bad";return{ s,show,cls };}
+const STORAGE_KEY = "trek_regions";
+function loadRegions(){ try{const raw=localStorage.getItem(STORAGE_KEY); if(!raw) return [...defaultRegions]; const arr=JSON.parse(raw); return Array.isArray(arr)&&arr.length?arr:[...defaultRegions];}catch{return [...defaultRegions];} }
+function saveRegions(list){ localStorage.setItem(STORAGE_KEY, JSON.stringify(list)); }
 
-const cardsEl=document.getElementById("cards");let regions=loadRegions();
-(async()=>{const items=[];for(const r of regions){try{const u=new URL("https://api.open-meteo.com/v1/forecast");u.search=new URLSearchParams({latitude:r.lat,longitude:r.lon,timezone:"auto",daily:"weather_code,temperature_2m_max,temperature_2m_min,precipitation_sum,wind_speed_10m_max",forecast_days:6});const res=await fetch(u);const data=await res.json(),d=data.daily;const today=scoreSuitability({wind:d.wind_speed_10m_max[0],precip:d.precipitation_sum[0],tmax:d.temperature_2m_max[0],tmin:d.temperature_2m_min[0],cloud:50});items.push({...r,data,today});}catch{items.push({...r,error:true,today:{s:5,show:"<10",cls:"bad"}});} }items.sort((a,b)=>b.today.s-a.today.s);items.forEach(renderRegion);})();
+/* ---------- Icons (neutral) ---------- */
+const I={
+  sun:'<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
+  cloud:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
+  rain:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></svg>',
+  drizzle:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M7 16l-.6 1.5m4.6-1.5l-.6 1.5m4.6-1.5l-.6 1.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></svg>',
+  storm:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M10 16l-2 5 5-3-2 5" stroke="currentColor" stroke-width="1.8" fill="none" stroke-linejoin="round"/></svg>',
+  snow:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><circle cx="7" cy="17" r="1.2"/><circle cx="12" cy="17" r="1.2"/><circle cx="17" cy="17" r="1.2"/></svg>'
+};
+function iconKey(code){
+  if([0].includes(code)) return 'sun';
+  if([1,2,3,45,48].includes(code)) return 'cloud';
+  if([51,53,55,56,57].includes(code)) return 'drizzle';
+  if([61,63,65,80,81,82].includes(code)) return 'rain';
+  if([66,67].includes(code)) return 'rain';
+  if([71,73,75,77,85,86].includes(code)) return 'snow';
+  if([95,96,99].includes(code)) return 'storm';
+  return 'cloud';
+}
+
+/* ---------- Scoring ---------- */
+function scoreSuitability({ wind, precip, tmax, tmin, cloud }){
+  let s=100;
+  if(wind>35)s-=(wind-35)*0.8;
+  if(wind>50)s-=(wind-50)*0.7;
+  if(precip>0)s-=Math.min(precip,10)*1.0;
+  if(precip>10)s-=(precip-10)*2.0;
+  if(tmax<2||tmin<-2)s-=10;
+  if(tmax>24)s-=(tmax-24)*1.0;
+  if(cloud>90)s-=3;
+  s=Math.round(Math.max(5,Math.min(100,s)));
+  const show=s<=10?"<10":s;
+  const cls=s>=55?"good":s>=40?"warn":"bad";
+  return { s, show, cls };
+}
+
+const cardsEl=document.getElementById("cards");
 function el(t,c,x){const e=document.createElement(t);if(c)e.className=c;if(x)e.textContent=x;return e;}
-function renderRegion(r){const card=el("div","card"),top=el("div","row");top.append(el("div","name",r.name));const del=el("button","del","✕");del.onclick=()=>{regions=regions.filter(x=>x.name!==r.name);saveRegions(regions);location.reload();};top.append(del);card.append(top);if(r.error){card.append(el("div","tiny","Couldn’t load data."));return cardsEl.append(card);}const d=r.data.daily,k=el("div","kpis");k.innerHTML=`<div class='k'><b>${d.temperature_2m_max[0].toFixed(0)}°/${d.temperature_2m_min[0].toFixed(0)}°</b><span class='tiny'>Temp</span></div><div class='k'><b>${Math.round(d.wind_speed_10m_max[0])}</b><span class='tiny'>Wind</span></div><div class='k'><b>${d.precipitation_sum[0].toFixed(1)}</b><span class='tiny'>Rain</span></div>`;card.append(k);const days=el("div","days");for(let i=0;i<d.time.length;i++){const s=scoreSuitability({wind:d.wind_speed_10m_max[i],precip:d.precipitation_sum[i],tmax:d.temperature_2m_max[i],tmin:d.temperature_2m_min[i],cloud:50});const c=el("div","d");c.append(el("div",`score ${s.cls}`,String(s.show)));const wx=el("div","wx");const ic=document.createElement("span");ic.className="ico";ic.innerHTML=I[iconKey(d.weather_code[i])];wx.append(ic,el("div","t",`${d.temperature_2m_max[i].toFixed(0)}°/${d.temperature_2m_min[i].toFixed(0)}°`));c.append(wx);days.append(c);}card.append(days);cardsEl.append(card);}
-document.getElementById('addBtn').onclick=()=>document.getElementById('addPanel').classList.toggle('show');
-document.getElementById('saveBtn').onclick=()=>{const n=nm.value.trim(),lat=parseFloat(lt.value),lon=parseFloat(ln.value);if(!n||isNaN(lat)||isNaN(lon)){alert("Enter name + coords");return;}regions.push({name:n,lat,lon});saveRegions(regions);location.reload();};
-document.getElementById('resetBtn').onclick=()=>{saveRegions(defaultRegions);location.reload();};
+
+async function fetchRegion(r){
+  const url=new URL("https://api.open-meteo.com/v1/forecast");
+  url.search=new URLSearchParams({
+    latitude:r.lat,longitude:r.lon,timezone:"auto",
+    daily:"weather_code,temperature_2m_max,temperature_2m_min,precipitation_sum,wind_speed_10m_max",
+    forecast_days:6}).toString();
+  const res=await fetch(url); if(!res.ok)throw new Error(res.status);
+  return res.json();
+}
+
+let regions = loadRegions();
+
+(async function buildAll(){
+  const items=[];
+  for(const r of regions){
+    try{
+      const data=await fetchRegion(r);
+      const d=data.daily;
+      const today=scoreSuitability({
+        wind:d.wind_speed_10m_max[0],
+        precip:d.precipitation_sum[0],
+        tmax:d.temperature_2m_max[0],
+        tmin:d.temperature_2m_min[0],
+        cloud:[45,48].includes(d.weather_code[0])?95:([0].includes(d.weather_code[0])?15:60)
+      });
+      items.push({...r,data,today});
+    }catch{
+      items.push({...r,error:true,today:{s:5,show:"<10",cls:"bad"}});
+    }
+  }
+  items.sort((a,b)=>b.today.s-a.today.s);
+  items.forEach(renderRegion);
+})();
+
+function renderRegion(r){
+  const card=el("div","card");
+  const top=el("div","row");
+  const left=el("div","name",r.name);
+  const del=el("button","del","✕");
+  del.title="Remove location";
+  del.onclick=()=>{
+    regions = regions.filter(x=> !(x.name===r.name && x.lat===r.lat && x.lon===r.lon));
+    saveRegions(regions); location.reload();
+  };
+  top.append(left,del);
+  card.append(top);
+
+  if(r.error){
+    card.append(el("div","tiny","Couldn’t load data right now."));
+    cardsEl.append(card);return;
+  }
+
+  const d=r.data.daily;
+  const kpis=el("div","kpis");
+  kpis.innerHTML=
+   `<div class='k'><span class='tiny'>Temp (max/min)</span><b>${d.temperature_2m_max[0].toFixed(0)}° / ${d.temperature_2m_min[0].toFixed(0)}°</b></div>
+    <div class='k'><span class='tiny'>Wind (max)</span><b>${Math.round(d.wind_speed_10m_max[0])} km/h</b></div>
+    <div class='k'><span class='tiny'>Rain (sum)</span><b>${d.precipitation_sum[0].toFixed(1)} mm</b></div>`;
+  card.append(kpis);
+
+  const days=el("div","days");
+  const fmt={weekday:"short"};
+  for(let i=0;i<d.time.length;i++){
+    const s=scoreSuitability({
+      wind:d.wind_speed_10m_max[i], precip:d.precipitation_sum[i],
+      tmax:d.temperature_2m_max[i], tmin:d.temperature_2m_min[i],
+      cloud:[45,48].includes(d.weather_code[i])?95:([0].includes(d.weather_code[i])?15:60)
+    });
+    const cell=el("div","d");
+    cell.append(el("div",`score ${s.cls}`,String(s.show)));
+    const dt=new Date(d.time[i]); cell.append(el("div","dt",dt.toLocaleDateString(undefined,fmt)));
+
+    const wx=el("div","wx");
+    const ic=document.createElement("span"); ic.className="ico"; ic.innerHTML=I[iconKey(d.weather_code[i])];
+    wx.append(ic,el("div","t",`${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
+    cell.append(wx);
+
+    cell.append(el("div","tiny",`${d.precipitation_sum[i].toFixed(1)} mm · ${Math.round(d.wind_speed_10m_max[i])} km/h`));
+    days.append(cell);
+  }
+  card.append(days); cardsEl.append(card);
+}
+
+/* ---------- Add UI ---------- */
+const panel=document.getElementById('addPanel');
+document.getElementById('addBtn').onclick=()=>panel.classList.toggle('show');
+document.getElementById('resetBtn').onclick=()=>{ saveRegions(defaultRegions); location.reload(); };
+document.getElementById('saveBtn').onclick=()=>{
+  const name=document.getElementById('nm').value.trim();
+  const lat=parseFloat(document.getElementById('lt').value);
+  const lon=parseFloat(document.getElementById('ln').value);
+  if(!name||Number.isNaN(lat)||Number.isNaN(lon)){ alert('Please enter name, latitude and longitude.'); return; }
+  regions.push({name,lat,lon}); saveRegions(regions); location.reload();
+};
 </script>
 </body>
 </html>
